--- a/khoBlog/templates/django_comments_xtd/comment_tree.html
+++ b/khoBlog/templates/django_comments_xtd/comment_tree.html
@@ -32,7 +32,7 @@
                 <span class="text-white-50">This comment has been removed.</span>
               {% endif %}
             {% endif %}
-            {% comment %} {% endcomment %}
+
             {% if item.comment.user and item.comment.user|has_permission:"django_comments.can_moderate" %}&nbsp;<span class="badge bg-secondary p-1">Moderator</span>{% endif %}
           </h4>
           <h6 class="text-small d-flex">
@@ -76,7 +76,6 @@
                     <h4>{{ item.comment.title }}</h4>
                   {% endif %}
 
-                  {% comment %} {% endcomment %}
                   {% include "includes/django_comments_xtd/comment_content.html" with content=item.comment.comment %}
                 </em>
               </div>
@@ -87,7 +86,6 @@
                 <h4>{{ item.comment.title }}</h4>
               {% endif %}
 
-              {% comment %} {% endcomment %}
               {% include "includes/django_comments_xtd/comment_content.html" with content=item.comment.comment %}
             </div>
             {% if allow_feedback %}
@@ -100,121 +98,75 @@
           {% endif %}
         </div>
         {% if not item.comment.is_removed and item.children %}
-          {% comment %} {% endcomment %}
+
           {% render_xtdcomment_tree with comments=item.children %}
         {% endif %}
       </div>
     </div>
   {% elif enable_tailwind_flag or user.is_authenticated and user.enable_tailwind %}
-    <article id="comment-{{ item.comment.id }}" class="p-6 ">
-      <div class="h-full border-2 border-gray-800 rounded-lg overflow-hidden">
-        <section class="p-6">
-            {% if not item.comment.user and not item.comment.alias_user and item.comment.user_name %}
-              {% if not item.comment.is_removed or user.is_superuser %}
-                <h1 class="text-lg font-medium text-white">{{ item.comment.user_name }}</h1>
+    <article id="comment-{{ item.comment.id }}" class="flex">
+      <div class="flex-1 border rounded-lg px-4 py-2 sm:px-6 sm:py-4 leading-relaxed">
+        <section class="font-bold">
+          {% if item.comment.user %}
+            {% if user.is_authenticated %}
+              {% if user == item.comment.user or user.is_superuser %}
+                <a class="dark:text-jumbo-100" href="{{ item.comment.user.get_absolute_url }}">{{ item.comment.user }}</a>
+              {% elif item.comment.user.owner %}
+                <a class="dark:text-jumbo-100" href="{{ item.comment.user.get_absolute_url }}">{{ item.comment.user }}</a>
+              {% elif not item.comment.is_removed %}
+                <span class="dark:text-jumbo-100">{{ item.comment.user }}</span>
               {% endif %}
-            {% elif item.comment.alias_user or item.comment.user and item.comment.alias_user %}
-              {% if user.is_superuser %}
-                <a class="text-lg font-medium text-white hover:underline" href="{{ item.comment.user.get_absolute_url }}">{{ item.comment.user }}</a>
-                <span class="text-sm text-muted">{{ item.comment.alias_user }}</span>
-              {% else %}
-                {% if not item.comment.is_removed %}
-                  {{ item.comment.alias_user }}
-                {% else %}
-                  <span class="text-muted">This comment has been removed.</span>
-                {% endif %}
-              {% endif %}
-            {% else %}
-              {% if user.is_superuser or user.id == item.comment.user.id %}
-                <a class="text-lg font-medium text-white hover:underline" href="{{ item.comment.user.get_absolute_url }}">{{ item.comment.user }}</a>
-              {% elif item.comment.user.owner and user.is_authenticated %}
-                <a class="text-lg font-medium text-white hover:underline" href="{{ item.comment.user.get_absolute_url }}">{{ item.comment.user }}</a>
-              {% else %}
-                <span class="text-lg font-medium text-white">{{ item.comment.user }}</span>
-              {% endif %}
+            {% elif not item.comment.is_removed %}
+              <span class="dark:text-jumbo-100">{{ item.comment.user }}</span>
             {% endif %}
-            {% comment %} {% endcomment %}
-            {% if item.comment.user and item.comment.user|has_permission:"django_comments.can_moderate" %}&nbsp;<span class="badge bg-secondary p-1">Moderator</span>{% endif %}
-          </h4>
-          <h6 class="text-sm flex">
-            {% spaceless %}
-              <div class="mr-auto">{{ item.comment.submit_date|date:'l, d F Y' }}
-                <a href="{% get_comment_permalink item.comment %}">
-                  <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 inline-flex" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
-                  </svg> Permalink
-                </a>
-              </div>
-            {% endspaceless %}
-            <span>
-              {% if not item.comment.is_removed %}
-                {% if perms.comments.can_moderate %}
-                  {% if item.flagged_count %}
-                    <span class="inline-flex items-center justify-center pl-0.5 pr-1 font-bold leading-none text-indigo-100 bg-red-600 rounded"title="{% blocktrans count counter=item.flagged_count %}A user has flagged this comment as inappropriate.{% plural %}{{ counter }} users have flagged this comment as inappropriate.{% endblocktrans %}">{{ item.flagged_count }}</span>
-                  {% endif %}
-                {% endif %}
-                {% if allow_flagging and item.flagged %}
-                  <span title="{% trans 'comment flagged' %}" class="inline-flex items-center justify-center pl-0.5 pr-1 leading-none">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" viewBox="0 0 20 20" fill="red">
-                      <path fill-rule="evenodd" d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" clip-rule="evenodd" />
-                    </svg>
-                  </span>
-                {% elif allow_flagging %}
-                  <a class="mutedlink" href="{% url 'comments-flag' item.comment.pk %}">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" viewBox="0 0 20 20" fill="currentColor">
-                      <path fill-rule="evenodd" d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" clip-rule="evenodd" />
-                    </svg>
-                  </a>
-                {% endif %}
-                {% if perms.comments.can_moderate %}
-                  <a class="mutedlink" href="{% url 'comments-delete' item.comment.pk %}">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
-                    </svg>
-                  </a>
-                {% endif %}
-              {% endif %}
-            {% endif %}
-          </span>
-        </h6>
-        {% if item.comment.is_removed %}
-          {% if not user.is_superuser %}
-            <p class="text-white-50{% if not allow_feedback and not item.comment.allow_thread %} pb-2{% endif %}">
-              <em>This comment has been removed.</em>
-            </p>
           {% else %}
-            <div class="content text-white-50{% if not allow_feedback and not item.comment.allow_thread %} pb-2{% endif %}">
-              <em>
+            {% if item.comment.user_name and not item.comment.is_removed %}
+              <span class="dark:text-jumbo-100">{{ item.comment.user_name }}</span>
+            {% endif %}
+          {% endif %}
+
+          {% if item.comment.user and not item.comment.user.is_active %}
+            <span class="text-sm font-normal text-red-500 dark:text-flamingo-600">This user was banned.</span>
+          {% elif item.comment.is_removed %}
+            <span class="text-sm font-normal text-red-500 dark:text-flamingo-600">This comment has been removed.</span>
+          {% endif %}
+
+          <span class="text-sm font-normal text-gray-900 dark:text-jumbo-50">{{ item.comment.submit_date|date:'l, d F Y' }}</span>
+        </section>
+          {% if item.comment.is_removed %}
+            {% if not user.is_superuser %}
+              <p class="text-gray-600 dark:text-jumbo-600{% if not allow_feedback and not item.comment.allow_thread %} pb-2{% endif %}">
+                This comment has been removed.
+              </p>
+            {% else %}
+              <div class="text-gray-600 dark:text-jumbo-600{% if not allow_feedback and not item.comment.allow_thread %} pb-2{% endif %}">
                 {% if item.comment.title %}
-                  <h4>{{ item.comment.title }}</h4>
+                  <div class="text-xl">{{ item.comment.title }}</div>
                 {% endif %}
 
-                {% comment %} {% endcomment %}
                 {% include "includes/django_comments_xtd/comment_content.html" with content=item.comment.comment %}
-              </em>
-            </div>
-          {% endif %}
-        {% else %}
-          <div class="content{% if not allow_feedback and not item.comment.allow_thread %} pb-2{% endif %}">
-            {% if item.comment.title %}
-              <h4>{{ item.comment.title }}</h4>
+              </div>
             {% endif %}
+          {% else %}
+            <div class="prose dark:prose-invert">
+              {% if item.comment.title %}
+                <div class="text-xl">{{ item.comment.title }}</div>
+              {% endif %}
 
-            {% comment %} {% endcomment %}
-            {% include "includes/django_comments_xtd/comment_content.html" with content=item.comment.comment %}
-          </div>
-          {% if allow_feedback %}
-            {% include "includes/django_comments_xtd/user_feedback.html" %}
+              {% include "includes/django_comments_xtd/comment_content.html" with content=item.comment.comment %}
+            </div>
+            {% if allow_feedback %}
+              {% include "includes/django_comments_xtd/user_feedback.html" %}
+            {% endif %}
+            {% if item.comment.allow_thread and not item.comment.is_removed and allow_feedback %}
+              {% if allow_feedback %}&nbsp;&nbsp;<span class="text-muted">&bull;</span>&nbsp;&nbsp;{% endif %}
+              <a class="text-sm text-gray-500 dark:text-jumbo-100 underline hover:no-underline" href="{{ item.comment.get_reply_url }}">{% trans "Reply" %}</a>
+            {% endif %}
           {% endif %}
-          {% if item.comment.allow_thread and not item.comment.is_removed %}
-            {% if allow_feedback %}&nbsp;&nbsp;<span class="text-white-50">&bull;</span>&nbsp;&nbsp;{% endif %}
-            <a class="small mutedlink" href="{{ item.comment.get_reply_url }}">{% trans "Reply" %}</a>
-          {% endif %}
-            </span>
-          </h6>
-        </section>
+
         {% if not item.comment.is_removed and item.children %}
-          {% comment %} {% endcomment %}
+          <h4 class="mt-5 mb-2 uppercase tracking-wide text-gray-400 dark:text-jumbo-200 font-bold text-xs">Replies</h4>
+
           {% render_xtdcomment_tree with comments=item.children %}
         {% endif %}
       </div>
