--- a/khoBlog/templates/tailwind/post_aside.html
+++ b/khoBlog/templates/tailwind/post_aside.html
@@ -1,4 +1,4 @@
-{% load read_time %}
+{% load read_time comments %}
 
 <h2 class="sr-only">Details</h2>
 <article class="space-y-5">
@@ -49,6 +49,15 @@
     <span class="text-gray-900 dark:text-jumbo-50 text-sm font-medium">
         {{ object.body|readtime }}
     </span>
+  </section>
+  {% get_comment_count for post as comment_count %}
+
+  <section class="flex items-center space-x-2">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400 dark:text-jumbo-100" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z" />
+    </svg>
+    <span class="text-gray-900 dark:text-jumbo-50 text-sm font-medium">{{ comment_count }}
+      comment{{ comment_count|pluralize:'s' }}</span>
   </section>
 </article>
 
