--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -3,12 +3,32 @@
 @tailwind utilities;
 
 @layer components {
+    .kho-button-border {
+        @apply dark:border-jumbo-600  border-gray-300;
+    }
+
+    .kho-button-border-focus {
+        @apply dark:focus:ring-flamingo-600/75 dark:focus:border-flamingo-600/75 focus:border-indigo-500 focus:ring-indigo-500;
+    }
+
+    .kho-button-bg {
+        @apply dark:bg-jumbo-700 dark:hover:bg-jumbo-800 disabled:dark:hover:bg-jumbo-700 bg-white hover:bg-gray-50 disabled:bg-slate-700;
+    }
+
+    .kho-button-text {
+        @apply dark:text-jumbo-50 text-gray-700 disabled:text-slate-50;
+    }
+
+    .kho-button-active {
+        @apply dark:bg-jumbo-700 dark:border-flamingo-100/50 dark:text-jumbo-50 border-indigo-500 bg-indigo-50 text-indigo-600;
+    }
+
     .menu_mobile_buttons {
         @apply mt-1 block rounded-md bg-indigo-800 px-3 py-2 text-base font-medium text-white first:mt-0;
     }
 
     .pagination_buttons {
-        @apply dark:bg-jumbo-700 dark:border-jumbo-600 dark:text-jumbo-50 dark:hover:bg-jumbo-800 disabled:dark:hover:bg-jumbo-700 relative inline-flex items-center border border-gray-300 px-2 py-2 text-sm font-medium text-gray-500 disabled:cursor-not-allowed disabled:bg-slate-600;
+        @apply kho-button-bg kho-button-text kho-button-border kho-button-border-focus relative inline-flex items-center border px-2 py-2 text-sm font-medium disabled:cursor-not-allowed;
     }
 
     .next_pagination_button {
@@ -44,7 +64,7 @@
     }
 
     .superbutton_base {
-        @apply dark:bg-jumbo-700 dark:border-jumbo-600 dark:text-jumbo-50 dark:hover:bg-jumbo-800 dark:focus:ring-flamingo-600/75 dark:focus:border-flamingo-600/75 relative inline-flex items-center border border-gray-300 bg-white py-2 text-sm font-medium text-gray-700 hover:bg-gray-50 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-1 focus:ring-indigo-500;
+        @apply kho-button-border kho-button-bg kho-button-text relative inline-flex items-center border py-2 text-sm font-medium focus:z-10 focus:outline-none focus:ring-1;
     }
 
     .superbutton_main_action {
@@ -173,11 +193,11 @@
     }
 
     .next_prev_buttons {
-        @apply dark:bg-jumbo-700 dark:border-jumbo-600 dark:text-jumbo-50 dark:hover:bg-jumbo-800 disabled:dark:hover:bg-jumbo-700 inline-flex items-center rounded-md border border-transparent px-2.5 py-1.5 text-xs font-medium leading-4 text-gray-500 disabled:cursor-not-allowed disabled:bg-slate-600 sm:px-3 sm:py-2 sm:text-sm;
+        @apply kho-button-border kho-button-bg kho-button-text kho-button-border-focus inline-flex items-center rounded-md border px-2.5 py-1.5 text-xs font-medium leading-4 disabled:cursor-not-allowed sm:px-3 sm:py-2 sm:text-sm;
     }
 
     .pagination_next_prev_buttons {
-        @apply border-jumbo-300 text-jumbo-700 hover:bg-jumbo-50 dark:bg-jumbo-700 dark:border-jumbo-600 dark:text-jumbo-50 relative inline-flex items-center rounded-md border bg-white px-4 py-2 text-sm font-medium;
+        @apply kho-button-border kho-button-bg kho-button-text kho-button-border-focus relative inline-flex items-center rounded-md border bg-white px-4 py-2 text-sm font-medium;
     }
 
     #darkLightm {
