--- a/khoBlog/templates/tailwind/facts_flyout.html
+++ b/khoBlog/templates/tailwind/facts_flyout.html
@@ -1,4 +1,4 @@
-{% load display markup_tags %}
+{% load display markup_tags facts %}
 
 <div x-data="Components.popover({ open: false, focus: false })" x-init="init()" @keydown.escape="onEscape" @close-popover-group.window="onClosePopoverGroup">
   <button type="button" x-state:on="Item active" x-state:off="Item inactive" class="group flyout_button" :class="{ 'text-gray-900 dark:text-jumbo-300': open, 'text-gray-500': !(open) }" @click="toggle" @mousedown="if (open) $event.preventDefault()" aria-expanded="false" :aria-expanded="open.toString()">
@@ -10,6 +10,8 @@
 
   <div x-show="open" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 -translate-y-1" x-transition:enter-end="opacity-100 translate-y-0" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100 translate-y-0" x-transition:leave-end="opacity-0 -translate-y-1" x-description="'Menu' flyout menu, show/hide based on flyout menu state." class="hidden md:block absolute z-10 top-full inset-x-0 transform shadow-lg bg-white dark:bg-jumbo-900" x-ref="panel" @click.away="open = false" style="display: none;">
     <div class="max-w-7xl mx-auto grid gap-y-10 px-4 py-8 sm:grid-cols-2 sm:gap-x-8 sm:py-12 sm:px-6 lg:px-8 xl:pr-12">
+      {% tw_facts %}
+
       {% get_objects 10 as o_facts for facts.fact %}
 
       {% for o_fact in o_facts %}
@@ -34,7 +36,7 @@
                   </div>
                 </div>
                 {% if o_fact.link %}
-                  <p class="mt-2 text-sm font-medium text-indigo-600 lg:mt-4">Learn more
+                  <p class="mt-2 text-sm font-medium text-indigo-600 dark:text-flamingo-300 lg:mt-4">Learn more
                     <span aria-hidden="true">→</span>
                   </p>
                 {% endif %}
