"Final" design with Tailwind

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -113,8 +113,6 @@
       <h5 class="text-white-50">Comments</h5>
       {% if post.enable_comments and not comments_disabled_globally_flag or user.is_superuser %}
         {% get_comment_count for post as comment_count %}
-
-        {% render_comment_form for post %}
         <hr/>
 
         <p class="text-white-50 text-small">This post has
@@ -131,7 +129,15 @@
   {% elif enable_tailwind_flag or user.is_authenticated and user.enable_tailwind %}
     <h3 class="mb-4 text-lg font-semibold text-gray-900 dark:text-jumbo-100 mt-12 border-t-2 border-gray-100 dark:border-jumbo-200">Comments</h3>
 
-    <section class="space-y-4">
+    {% render_comment_form for post %}
+
+    <div class="relative">
+      <div class="absolute inset-0 mt-2 flex items-center" aria-hidden="true">
+        <div class="w-full border-t border-gray-300"></div>
+      </div>
+    </div>
+
+    <section class="mt-4 space-y-4">
       {% render_xtdcomment_tree for post %}
     </section>
   {% endif %}
