--- a/khoBlog/templates/sub_base_main_block.html
+++ b/khoBlog/templates/sub_base_main_block.html
@@ -133,7 +133,7 @@
                         {{ i }}
                       </span>
                     {% else %}
-                      <a href="{% relative_url i 'page' request.GET.urlencode %}" class="kho-button-bg kho-button-text kho-button-border relative inline-flex items-center px-4 py-2 border text-sm font-medium">
+                      <a href="{% relative_url i 'page' request.GET.urlencode %}" class="kho-button-bg kho-button-bg-hover kho-button-text kho-button-border relative inline-flex items-center px-4 py-2 border text-sm font-medium">
                         {{ i }}
                       </a>
                     {% endif %}
