--- a/khoBlog/templates/tailwind/more_flyout.html
+++ b/khoBlog/templates/tailwind/more_flyout.html
@@ -24,7 +24,7 @@
                   {{ o_page.description }}
                 </p>
               </div>
-              <p class="mt-2 text-sm font-medium text-indigo-600 lg:mt-4">Learn more
+              <p class="mt-2 text-sm font-medium text-indigo-600 dark:text-flamingo-300 lg:mt-4">Learn more
                 <span aria-hidden="true">→</span></p>
             </div>
           </div>
@@ -43,7 +43,7 @@
                   {{ o_post.description }}
                 </p>
               </div>
-              <p class="mt-2 text-sm font-medium text-indigo-600 lg:mt-4">Learn more
+              <p class="mt-2 text-sm font-medium text-indigo-600 dark:text-flamingo-300 lg:mt-4">Learn more
                 <span aria-hidden="true">→</span></p>
             </div>
           </div>
