--- a/khoBlog/templates/comments/form.html
+++ b/khoBlog/templates/comments/form.html
@@ -1,65 +1,45 @@
 {% load i18n comments project_tags widget_tweaks %}
-{% comment %} {% endcomment %}
 
 {% if user.is_authenticated %}
-  <div class="card formcard">
-    <div class="card-body">
-      <form method="POST" action="{% comment_form_target %}" onsubmit="post.disabled=true; return true;">
-        {% csrf_token %}
+  <form method="POST" action="{% comment_form_target %}" onsubmit="post.disabled=true; return true;">
+    {% csrf_token %}
 
-        <div class="non-field-errors">
-          {{ form.non_field_errors }}
-        </div>
-
-        <div class="hidden-fields-errors">
-          {% for hidden_field in form.hidden_fields %}
-            {{ hidden_field.errors }}
-            {{ hidden_field }}
-          {% endfor %}
-        </div>
-
-        {{ form.honeypot }}
-
-        <div class="text-danger">
-          {{ form.non_field_errors }}
-        </div>
-
-        <div class="field mb-2">
-          <div class="form-floating">
-            {{ form.title|add_class:"form-control"|attr:"placeholder:" }}
-            {{ form.title.label_tag }}
-          </div>
-        </div>
-        {% for error in form.title.errors %}
-          <small class="form-text text-danger">{{ error }}</small>
-        {% endfor %}
-
-        <div class="field mb-2">
-          <div class="form-floating">
-            {{ form.comment|add_class:"form-control"|attr:"placeholder:" }}
-            {{ form.comment.label_tag }}
-          </div>
-        </div>
-        {% for error in form.comment.errors %}
-          <small class="form-text text-danger">{{ error }}</small>
-        {% endfor %}
-
-        <div class="field mb-2">
-          <div class="form-floating">
-            {{ form.alias_user|add_class:"form-control"|attr:"placeholder:" }}
-            {{ form.alias_user.label_tag }}
-          </div>
-          <span class="text-small text-white-50">{{ form.alias_user.help_text }}</span>
-        </div>
-        {% for error in form.alias_user.errors %}
-          <small class="form-text text-danger">{{ error }}</small>
-        {% endfor %}
-
-        <input type="hidden" name="next" value="{% url 'comments-xtd-sent' %}"/>
-        <input class="btn btn-primary" type="submit" value="Add comment" id="id_submit"/>
-      </form>
+    <div class="non-field-errors">
+      {{ form.non_field_errors }}
     </div>
-  </div>
+
+    <div class="hidden-fields-errors">
+      {% for hidden_field in form.hidden_fields %}
+        {{ hidden_field.errors }}
+        {{ hidden_field }}
+      {% endfor %}
+    </div>
+
+    {{ form.honeypot }}
+
+    <div class="text-danger">
+      {{ form.non_field_errors }}
+    </div>
+
+    <div class="field mb-2">
+      {{ form.title.label_tag }}
+      {{ form.title|add_class:"form-control" }}
+    </div>
+    {% for error in form.title.errors %}
+      <small class="form-text text-danger">{{ error }}</small>
+    {% endfor %}
+
+    <div class="field mb-2">
+      {{ form.comment.label_tag }}
+      {{ form.comment|add_class:"form-control" }}
+    </div>
+    {% for error in form.comment.errors %}
+      <small class="form-text text-danger">{{ error }}</small>
+    {% endfor %}
+
+    <input type="hidden" name="next" value="{% url 'comments-xtd-sent' %}"/>
+    <input class="inline-flex items-center justify-center px-3 py-2 border border-transparent rounded-md shadow-sm text-xs lg:text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700 cursor-pointer" type="submit" value="Add comment" id="id_submit"/>
+  </form>
 {% else %}
   <p>Please
     <a href="{% url 'account_login' %}">Log in</a>
