--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -1,5 +1,5 @@
 {% load static socialaccount analytical google_analytics_gtag tailwind_tags theme_buttons %}
-{% comment %} {% endcomment %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -97,7 +97,7 @@
     {% endif %}
   </head>
 
-  <body class="antialiased min-h-screen bg-white dark:bg-jumbo-900">
+  <body class="antialiased min-h-screen bg-white dark:bg-jumbo-900 dark:text-jumbo-100">
     {% if not debug_flag %}
       {% analytical_body_top %}
 
