--- a/blog/templates/blog/lists/post_list.html
+++ b/blog/templates/blog/lists/post_list.html
@@ -1,105 +1,6 @@
 {% extends 'blog/base_post.html' %}
-{% load static featured_post post_cards cards comments %}
-
-{% block page_top %}
-  {% if not enable_tailwind_flag and user.is_authenticated and not user.enable_tailwind or not enable_tailwind_flag and not user.is_authenticated %}
-    {% if show_featured %}
-      {% block page_top_featured %}
-        {% featured_big_posts %}
-        {% featured_posts %}
-      {% endblock page_top_featured %}
-    {% endif %}
-
-    {% if previous_year or next_year or previous_month or next_month or previous_week or next_week or previous_day or next_day %}
-      <nav class="w-100">
-        {% if previous_year or next_year %}
-          <div>
-            {% if previous_year %}
-              Previous Year:
-              <a href="{% url 'blog:archive_year' year=previous_year|date:'Y' %}">{{ previous_year|date:"Y" }}</a>
-            {% endif %}
-            {% if previous_year and next_year %}--{% endif %}
-            {% if next_year %}
-              Next Year:
-              <a href="{% url 'blog:archive_year' year=next_year|date:'Y' %}">{{ next_year|date:"Y" }}</a>
-            {% endif %}
-          </div>
-        {% endif %}
-
-        {% if previous_month or next_month %}
-          <div>
-            {% if previous_month %}
-              Previous Month:
-              <a href="{% url 'blog:archive_month' year=previous_month|date:'Y' month=previous_month|date:'M' %}">{{ previous_month|date:"F Y" }}</a>
-            {% endif %}
-            {% if previous_month and next_month %}--{% endif %}
-            {% if next_month %}
-              Next Month:
-              <a href="{% url 'blog:archive_month' year=next_month|date:'Y' month=next_month|date:'M' %}">{{ next_month|date:"F Y" }}</a>
-            {% endif %}
-          </div>
-        {% endif %}
-
-        {% if previous_week or next_week %}
-          <div>
-            {% if previous_week %}
-              Previous Week:
-              <a href="{% url 'blog:archive_week' year=previous_week|date:'Y' week=previous_week|date:'W' %}">{{ previous_week|date:"W" }}
-                of
-                {{ previous_week|date:"Y" }}</a>
-            {% endif %}
-            {% if previous_week and next_week %}--{% endif %}
-            {% if next_week %}
-              Next week:
-              <a href="{% url 'blog:archive_week' year=next_week|date:'Y' week=next_week|date:'W' %}">{{ next_week|date:"W" }}
-                of
-                {{ next_week|date:"Y" }}</a>
-            {% endif %}
-          </div>
-        {% endif %}
-
-        {% if previous_day or next_day %}
-          <div>
-            {% if previous_day %}
-              Previous Day:
-              <a href="{% url 'blog:archive_day' year=previous_day|date:'Y' month=previous_day|date:'M' day=previous_day|date:'d' %}">{{ previous_day }}</a>
-            {% endif %}
-            {% if previous_day and next_day %}--{% endif %}
-            {% if next_day %}
-              Next Day:
-              <a href="{% url 'blog:archive_day' year=next_day|date:'Y' month=next_day|date:'M' day=next_day|date:'d' %}">{{ next_day }}</a>
-            {% endif %}
-          </div>
-        {% endif %}
-      </nav>
-    {% endif %}
-
-    {% block page_top_hr %}
-      <div class='text-then-hr text-small text-white-50'>
-        <span class='hr-title'><span class="me-2">{{ posts.count }}
-            Post{{ posts.count|pluralize:'s' }}</span></span>
-      </div>
-    {% endblock page_top_hr %}
-  {% endif %}
-{% endblock page_top %}
+{% load static cards comments %}
 
 {% block content_main %}
-
-  {% if not enable_tailwind_flag and user.is_authenticated and not user.enable_tailwind or not enable_tailwind_flag and not user.is_authenticated %}
-    <section class="row row-cols-1 row-cols-md-2 row-cols-xxl-3 me-0">
-      {% for post in posts %}
-        <section class="mb-2 pe-0">
-          {% comment %} {% endcomment %}
-          {% render_cards post in_list=True %}
-        </section>
-        {% empty %}
-        <section class="w-100">
-          <p>No content here.</p>
-        </section>
-      {% endfor %}
-    </section>
-  {% elif enable_tailwind_flag or user.is_authenticated and user.enable_tailwind %}
-    {% comment %} {% endcomment %}
-    {% include 'tailwind/card_container.html' with object_list=posts %}
-  {% endif %}
+  {% include 'tailwind/card_container.html' with object_list=posts %}
 {% endblock content_main %}
