justify between things in menu

--- a/khoBlog/templates/tailwind/menu_flyout.html
+++ b/khoBlog/templates/tailwind/menu_flyout.html
@@ -41,7 +41,7 @@
       </div>
     </div>
     <div class="bg-gray-50 dark:bg-jumbo-900">
-      <div class="max-w-7xl mx-auto flex flex-wrap justify-around px-4 py-5">
+      <div class="max-w-7xl mx-auto flex flex-wrap justify-between px-4 py-5">
         {% mfl_setting default "desktop" "D" %}
         {% mfl_setting default "desktop" "NP" %}
         {% mfl_setting default "desktop" "NS" %}
