removed a lot of old code, refactor, menu changes

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -64,7 +64,7 @@
           </p>
         </div>
         {% if user.is_superuser %}
-          {% twsb object %}
+          {% sb object %}
         {% endif %}
       </div>
       <div class="py-3 xl:pt-6 xl:pb-0">
