--- a/khoBlog/templates/account/profile.html
+++ b/khoBlog/templates/account/profile.html
@@ -23,7 +23,7 @@
         </div>
         {% if object == user %}
           <div class="mt-6 flex flex-col justify-stretch space-y-3 sm:flex-row sm:space-y-0 sm:space-x-4">
-            {% twusb object %}
+            {% usb object %}
           </div>
         {% elif user.is_superuser %}
           <div class="mx-auto text-right">
