--- a/khoBlog/templates/flatpages/default.html
+++ b/khoBlog/templates/flatpages/default.html
@@ -23,7 +23,7 @@
             </p>
           </div>
           {% if user.is_superuser %}
-            {% twsb page %}
+            {% sb page %}
           {% endif %}
         </div>
         <div class="py-3 xl:pt-6 xl:pb-0">
