--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -147,7 +147,7 @@
             </a>
           </div>
           <div class="px-5 py-2">
-            <a href="{% url 'blog:post_archive' %}" class="text-base text-gray-500 hover:text-gray-900 dark:hover:text-jumbo-100">
+            <a href="{% url 'blog:post_list' %}" class="text-base text-gray-500 hover:text-gray-900 dark:hover:text-jumbo-100">
               Blog
             </a>
           </div>
