--- a/khoBlog/templates/tailwind/menu_footer_links.html
+++ b/khoBlog/templates/tailwind/menu_footer_links.html
@@ -1,5 +1,5 @@
 {% for link in menu_footer_links %}
-  <a href="{{ link.get_rel_url }}" class="{% if dev_class %}mobile_menu_grid_items{% else %}flyout_bottom_items{% endif %}">
+  <a href="{{ link.get_rel_url }}"{% if link.is_target_blank %} target="_blank"{% endif %} class="{% if dev_class %}mobile_menu_grid_items{% else %}flyout_bottom_items{% endif %}">
       {{ link }}
   </a>
 {% endfor %}
