--- a/portfolio/templates/portfolio/project_detail.html
+++ b/portfolio/templates/portfolio/project_detail.html
@@ -12,7 +12,7 @@
           </p>
         </div>
         {% if user.is_superuser %}
-          {% twsb project %}
+          {% sb project %}
         {% endif %}
       </section>
       <section class="py-3 xl:pt-6 xl:pb-0">
