--- a/khoBlog/templates/tailwind/menu.html
+++ b/khoBlog/templates/tailwind/menu.html
@@ -56,7 +56,7 @@
   </div>
 
   <div x-show="open" x-transition:enter="duration-200 ease-out" x-transition:enter-start="opacity-0 scale-95" x-transition:enter-end="opacity-100 scale-100" x-transition:leave="duration-100 ease-in" x-transition:leave-start="opacity-100 scale-100" x-transition:leave-end="opacity-0 scale-95" x-description="Mobile menu, show/hide based on mobile menu state." class="absolute z-30 top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden" x-ref="panel" @click.away="open = false">
-    <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-white dark:bg-jumbo-800 divide-y-2 divide-gray-50 dark:divide-jumbo-50">
+    <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-white dark:bg-jumbo-800 divide-y-2 divide-gray-50 dark:divide-jumbo-200">
       <div class="pt-5 pb-6 px-5 sm:pb-8">
         <div class="flex items-center justify-between">
           <div>
@@ -73,8 +73,8 @@
         </div>
         <div class="mt-6 sm:mt-8">
           <nav>
-            <div class="grid gap-7 sm:grid-cols-2 sm:gap-y-8 sm:gap-x-4">
-              {% links_menu_n urls %}
+            <div class="grid gap-7 grid-cols-2 sm:gap-y-8 sm:gap-x-4">
+              {% links_menu urls mobile=True %}
             </div>
           </nav>
         </div>
