--- a/khoBlog/templates/tailwind/menu_flyout.html
+++ b/khoBlog/templates/tailwind/menu_flyout.html
@@ -16,7 +16,7 @@
             Read content
           </h3>
           <ul role="list" class="mt-5 space-y-6">
-            {% links_menu_n urls %}
+            {% links_menu urls %}
           </ul>
         </div>
         <div>
@@ -24,7 +24,7 @@
             Featured Posts
           </h3>
           <ul role="list" class="mt-5 space-y-6">
-            {% featured_post_list_n urls %}
+            {% featured_post_list urls %}
           </ul>
         </div>
       </nav>
@@ -35,12 +35,21 @@
             The best content!
           </h3>
           <ul role="list" class="mt-6 space-y-6">
-            {% featured_big_post_list_n objects %}
+            {% featured_big_post_list objects %}
           </ul>
         </div>
       </div>
     </div>
-    <div class="bg-gray-50 dark:bg-jumbo-900">
+    <div class="bg-white dark:bg-jumbo-900">
+      <div class="relative">
+        <div class="absolute max-w-7xl px-4 sm:px-6 mx-auto inset-0 flex items-center" aria-hidden="true">
+          <div class="w-full border-t border-gray-300 dark:border-jumbo-200"></div>
+        </div>
+        <div class="relative flex justify-center">
+          <span class="px-2 text-sm bg-white dark:bg-jumbo-900 text-gray-500 dark:text-jumbo-300">Direct links</span>
+        </div>
+      </div>
+
       <div class="max-w-7xl mx-auto flex flex-wrap justify-between px-4 py-5">
         {% mfl_setting default "desktop" "D" %}
         {% mfl_setting default "desktop" "NP" %}
